--- a/views/partials/application.ejs
+++ b/views/partials/application.ejs
@@ -1,4 +1,5 @@
- <% if(environment  === 'production'){ %>
+ 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=<%= google_maps_key %>"></script>  
+<% if(environment  === 'production'){ %>
    <script type="text/javascript" src="/build/js/min/<%= npm_package_name %>.min.js"></script>
  <% } else{ %>
  	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
@@ -17,7 +18,19 @@
 	<script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/js/directives.js"></script>
-	<script type="text/javascript" src="/js/controllers/homeCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/accountCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/dashboardCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/patronCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/gameCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/reportsCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/generalCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/confirmationCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/profileCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/modalCtrls.js"></script>
+	<script type="text/javascript" src="/js/controllers/retrieveCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/organizationCtrl.js"></script>
+	<script type="text/javascript" src="/js/controllers/adminCtrl.js"></script>
+  	<script type="text/javascript" src="/js/common.js"></script>
 <% } %>
 <script type="text/javascript">
 	//loads page data to angular;
