adding build to project

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,4 +1,4 @@
-<article class="laughing-home" ng-controller="HomCtrl as hCtrl">
+<article class="laughing-home" ng-controller="HomeCtrl as hCtrl">
       <ng-include src="currentPage"/>
 </article>
 <%- contentFor('title') %>Laughing Lives Matter<%- contentFor('end') %>
